# Algebra

./: .env.example  .gitignore  README.md  docker-compose.development.yml  docker-compose.local.yml  docker-compose.yml
best_apr_backend/: gunicorn.py  manage.py  pyproject.toml
best_apr_backend/api/: urls.py  views.py
best_apr_backend/backend/: asgi.py  celery.py  consts.py  urls.py  wsgi.py
best_apr_backend/backend/settings/: base.py  development.py  local.py  production.py
best_apr_backend/base/: models.py  requests.py
best_apr_backend/best_apr/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
best_apr_backend/best_apr/services/: functions.py
best_apr_backend/blockchain_explorers/: admin.py  apps.py  exceptions.py  models.py
best_apr_backend/content/: admin.py  models.py  serializers.py  urls.py  views.py
best_apr_backend/contracts/: admin.py  exceptions.py  models.py
best_apr_backend/networks/: admin.py  apps.py  exceptions.py  models.py  types.py
best_apr_backend/networks/services/: functions.py
best_apr_backend/tokens/: admin.py  exceptions.py  models.py
best_apr_backend/tokens/services/: functions.py
best_apr_backend/users/: admin.py  models.py
best_apr_backend/vault_swaps/: apps.py  models.py  tasks.py  urls.py  views.py
best_apr_backend/vault_swaps/services/: functions.py
docker/: backend.Dockerfile  celery_beat.Dockerfile  celery_broker.Dockerfile  celery_worker.Dockerfile  database.Dockerfile  http_server.Dockerfile
k8s/: backend-config-map.yaml  backend-deployment.yaml  backend-ingress.yaml  backend-service.yaml  (+4 more)
(+10 files in other folders)
